@@ -105,14 +105,6 @@ public enum ConfigNodes {
             GTOWN_SETTINGS_REGEN_SPEED("global_town_settings.health_regen.speed","3s"),
             GTOWN_SETTINGS_REGEN_ENABLE("global_town_settings.health_regen.enable","true"),
             GTOWN_SETTINGS_DAILY_TAXES("global_town_settings.daily_taxes","", ""),
-            GTOWN_SETTINGS_DAILY_TAXES_ENABLED("global_town_settings.daily_taxes.enabled","true",
-            		"# Enables taxes to be collected daily by town/nation",
-                    "# If a town can't pay it's tax then it is kicked from the nation.",
-                    "# if a resident can't pay his plot tax he loses his plot.",
-                    "# if a resident can't pay his town tax then he is kicked from the town.",
-                    "# if a town or nation fails to pay it's upkeep it is deleted."),
-            GTOWN_SETTINGS_DAILY_TAXES_MAX_TAX("global_town_settings.daily_taxes.max_tax_amount","1000.0", "# Maximum amount allowed when using flat taxes"),
-            GTOWN_SETTINGS_DAILY_TAXES_MAX_TAX_PERCENT("global_town_settings.daily_taxes.max_tax_percent","25", "# maximum percentage allowed when taxing by percentages"),
             GTOWN_SETTINGS_ALLOW_OUTPOSTS("global_town_settings.allow_outposts","true", "# Allow towns to claim outposts (a townblock not connected to town)."),
             GTOWN_SETTINGS_ALLOW_TOWN_SPAWN("global_town_settings.allow_town_spawn","true", "# Allow the use of /town spawn"),
             GTOWN_SETTINGS_ALLOW_TOWN_SPAWN_TRAVEL("global_town_settings.allow_town_spawn_travel","true", "# Allow regular residents to use /town spawn [town] (TP to other towns if they are public)."),
@@ -369,6 +361,14 @@ public enum ConfigNodes {
                     "# Use 0 for no limit"),
             ECO_BANK_NATION_ALLOW_WITHDRAWLS("economy.banks.nation_allow_withdrawls","true",
                     "# Set to true to allow withdrawls from nation banks"),
+            ECO_DAILY_TAXES_ENABLED("economy.daily_taxes.enabled","true",
+            		"# Enables taxes to be collected daily by town/nation",
+                    "# If a town can't pay it's tax then it is kicked from the nation.",
+                    "# if a resident can't pay his plot tax he loses his plot.",
+                    "# if a resident can't pay his town tax then he is kicked from the town.",
+                    "# if a town or nation fails to pay it's upkeep it is deleted."),
+            ECO_DAILY_TAXES_MAX_TAX("economy.daily_taxes.max_tax_amount","1000.0", "# Maximum amount allowed when using flat taxes"),
+            ECO_DAILY_TAXES_MAX_TAX_PERCENT("economy.daily_taxes.max_tax_percent","25", "# maximum percentage allowed when taxing by percentages"),
                     
             WAR("war","",
             		"", "",
